<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StringOperationsFragment">

    <LinearLayout
        android:id="@+id/result_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/result_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/result"
            android:textColor="?attr/text_color"
            android:textSize="37sp" />

        <TextView
            android:id="@+id/output_text_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:textColor="?attr/text_color"
            android:textSize="20sp" />

        <Button
            android:id="@+id/view_functions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="14dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/round_corners"
            android:text="@string/string_operations"
            android:textAllCaps="false"
            android:textColor="?attr/text_color"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/string_operations_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/functions_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="cursive"
            android:layout_marginTop="50dp"
            android:text="@string/string_operations"
            android:textColor="?attr/text_color"
            android:textSize="37sp"/>

        <Button
            android:id="@+id/append_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_corners"
            android:text="@string/append"
            android:textAllCaps="false"
            android:textColor="?attr/text_color" />

        <Button
            android:id="@+id/reverse_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_corners"
            android:text="@string/reverse"
            android:textAllCaps="false"
            android:textColor="?attr/text_color" />

        <Button
            android:id="@+id/split_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_corners"
            android:text="@string/split"
            android:textAllCaps="false"
            android:textColor="?attr/text_color" />

        <Button
            android:id="@+id/uppercase_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_corners"
            android:text="@string/uppercase"
            android:textAllCaps="false"
            android:textColor="?attr/text_color" />

    </LinearLayout>

</FrameLayout>